Fixed filter to category bug fix getAllEvents and updated swagger
